--- a/src/App.css
+++ b/src/App.css
@@ -32,18 +32,18 @@ body {
 }
 .admin__nav {
   flex: 0 0 300px;
-  background-image: url("/public/images/images-1.jpg");
-  background-color: grey;
+
+
   overflow: scroll;
   max-height:100%;
+   filter: grayscale(35%);
 }
 .admin__main {
   max-height: 100%;
   background-color: #e7e7e7;
-  background-image: url(/public/images/sidenav.png);
+
   flex: 1;
 
-  padding: var(--spacing);
   overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
@@ -108,27 +108,41 @@ a {
   text-decoration: none;
 }
 
-.logo {
+.brand {
   display: flex;
-  flex: 0 0 300px;
+  flex: 0 0 250px;
   height: 70px;
   justify-content: center;
   align-items: center;
   position: relative;
   margin: 0;
   color: #fff;
-  background-color: #dc5a60;
+  background-color: #67b4ba;
   font-size: 1rem;
+
 }
-.logo h1 {
+.brand h1 {
   margin: 0;
 }
+
+.logo{
+  float:left;
+}
+
+.logo img {
+  height:70px;
+  width:200px;
+  float:left;
+
+}
 .toolbar {
+   background-color: #67b4ba;
   display: flex;
   flex: 1;
   justify-content: space-between;
   align-items: center;
   padding: 0 var(--spacing);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
 }
 .menu {
   list-style-type: none;
@@ -178,11 +192,18 @@ a {
   cursor: grab;
   border-radius: 15px;
 
+
   overflow: scroll;
 }
 .profile h3 {
   font-family: 'Quicksand', sans-serif;
 }
+
+.withBorder {
+  border: 1px solid white;
+
+}
+
 .title {
   color: grey;
   font-size: 18px;
@@ -197,9 +218,10 @@ a {
 
  .photo {
   max-width:100%;
-  height:400px;
-  height
+  height:350px;
+
   display: block;
+  border-bottom: 1px solid black
  /* margin-left: 0px;
   margin-right: 5px;
 */
@@ -222,6 +244,27 @@ width:100%;
 
 }
 
+.restInfo h2 {
+margin-top: 20px;
+margin-bottom: 7px;
+-webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+
+}
+
+.restInfo h3 {
+  margin-bottom:10px;
+  margin-top:10px;
+
+}
+
+.restInfo h5 {
+  margin-bottom:10px;
+  margin-top:15px;
+}
+
+
 .getRestaurant {
   text-align: center;
   margin-top: 250px;
@@ -231,78 +274,260 @@ width:100%;
 .foodtype {
   height:70px;
   font-size: 40px;
-  padding: 10px;
+  padding-left: 30px;
   width: 55%;
+  opacity: .8;
+  border: 2px solid #67b4ba;
+
+  /*border: 2px solid red;*/
 }
 
 .distance {
-  display:inline-block;
-  height:70px;
-  width:110px ;
+  display:block;
+  height:30px;
+  width:120px ;
   font-size: 20px;
+  margin-left: auto;
+  margin-right:auto;
+
  }
 
 .restCard {
-height:750px;
+height:650px;
+opacity:1.0;
 }
 
  .modal {
   top:400px;
   margin-left: 50%;
+
  }
 
-.eventCards {
-  height:30px;
-  background-color: white;
-  font-size: 10px;
+ /*.insideModal p {
+
+ }*/
+
+ .insideModal {
+  height: 50%;
+  width: 25%;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 35px;
   text-align: center;
-  line-height:12px;
-  width: 80%;
-  margin: auto;
-  margin-top:20px;
-  margin-bottom: 20px;
   border-radius: 15px;
-  cursor: pointer;
-  /*padding: 3px;*/
-
  }
 
-.eventCards h1 {
+ .insideModal p {
   text-decoration: underline;
+ }
+
+ .insideModal input {
+  border: none;
+  border-bottom: 2px solid #67b4ba;
+  outline-width: 0;
+  width: 60%;
+  height: 50px;
+  font-size: 25px;
+  margin-bottom: 10px;
+  background-color : white;
+  outline: none;
+ }
+
+ input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
 }
 
-.eventCardsOpen {
-  background-color: white;
-  font-size: 10px;
+.Collapsible {
+  background-color: #d8d9db;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  width:80%;
+  font-size: 15px;
   text-align: center;
-  line-height:12px;
-  width: 80%;
-  margin: auto;
-  margin-top:20px;
-  margin-bottom: 20px;
-  border-radius: 15px;
+  margin-left:auto;
+  margin-right:auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+  border-radius: 5px;
+  box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
+  border: 2px solid #67b4ba ;
+
+
 }
+
+
+
+
+
+.Collapsible__contentInner {
+  background-color: #d8d9db;
+  font-size: 20px;
+  text-align: center;
+   -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+  margin-left:7px;
+  margin-right:7px;
+
+
+
+
+
+  }
+
+
+  .is-closed{
+   cursor:pointer;
+   }
+
+   .is-open h1 {
+    cursor:pointer;
+    margin-bottom: 0;
+   }
+
+
+
+
+
+
+
 
 .eventList {
   height:100vh;
 }
 
-.Collapsible {
-  margin-bottom: 20px;
-}
+
 
 .eventForm {
-  height: 75vh;
-  max-width: 200vw;
+  height: 85vh;
+  text-align: center;
+
+   cursor:default;
+}
+
+.eventInfo {
+  border: none;
+  font-size: 22px;
+  width: 80%;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  height:30px;
+  border-bottom: 2px solid #67b4ba;
+
+}
+
+.hiddenRestaurantInfo{
+  display: none;
+  height: 0px;
+  width:0px;
+}
+
+
+.addressString {
+ display: none;
+ height: 0px;
+ width:0px;
+}
+
+.overlap {
+  position: flex;
+  width:75px;
+  float:right;
+  margin-right: 15px;
+  margin-top: 10px;
+  margin-left: 3px;
+}
+
+.rating {
+  background-color: #67b4ba;
+  text-align: center;
+  height: 75px;
+  width: 75px;
+  padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 50px;
+
+    margin:0;
+    position:relative;
+}
+
+.price h5 {
+  margin-top:5px;
+  color:green;
+  font-size:25px;
+
+
+}
+
+.description {
+ background-color: white;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+
+.ToggleButton {
   text-align: center;
 }
 
-.restaurantInfo {
-  border: none;
-  border-bottom: 2px solid black;
-  font-size: 30px;
+.ToggleButton button {
+  width: 100%;
+  background-color: #67b4ba;
+  height:40px;
+  border-top: 1px solid white;
+  color:white;
 }
 
+.react-datetime-picker {
+  margin-top:5px;
+
+}
+
+input.react-datetime-picker__button__input__month {
+  font-size: 20px;
+}
+
+input.react-datetime-picker__button__input__day {
+ font-size: 20px;
+}
+
+input.react-datetime-picker__button__input__year {
+ font-size: 20px;
+
+}
+
+input.react-datetime-picker__button__input__hour {
+   font-size: 20px;
+
+}
+
+input.react-datetime-picker__button__input__minute {
+   font-size: 20px;
+
+}
+
+.react-datetime-picker__button {
+  padding:5px;
+   border: 2px solid #67b4ba;
+
+
+}
+
+.react-datetime-picker__clear-button {
+  display:none;
+}
+
+textarea.eventDescription {
+  border: 2px solid #67b4ba;
+  width:80%;
+  height:125px;
+  font-size: 22px;
+  padding:10px;
+
+}
 
 /* button {
   border: none;
