--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,36 @@
   box-sizing: border-box;
 }
 
+.root {
+height: 100%;
+    overflow: auto;
+}
 
 
 body {
-
+  font-family: 'Fira Sans';
   overflow-x: hidden;
 }
+
+/*.belowNav {
+  flex: 0 0 300px;
+
+
+  overflow: scroll;
+  max-height:100%;
+   filter: grayscale(35%);
+   max-height: 100%;
+  background-color: #e7e7e7;
+
+  flex: 1;
+
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+
+
+}*/
+
 .admin {
 
   --spacing: 1rem;
@@ -18,7 +42,7 @@ body {
 
 
   grid-template-columns: 300px 1fr;
-  grid-template-areas: "header header" "nav    main" "footer footer";
+  grid-template-areas: "header header" "nav    main" ;
 
 }
 .admin__header {
@@ -36,11 +60,11 @@ body {
 
   overflow: scroll;
   max-height:100%;
-   filter: grayscale(35%);
-}
+ }
+
 .admin__main {
   max-height: 100%;
-  background-color: #e7e7e7;
+
 
   flex: 1;
 
@@ -64,17 +88,7 @@ body {
   width: 100%;
   height: 100%;
 }
-.admin__footer {
-  display: flex;
 
-  flex-basis: 100%;
-  justify-content: space-between;
-  align-items: center;
-  height: 70px;
-  padding: 0 var(--spacing);
-  color: #4e5561;
-  background-color: #1d2127;
-}
 @media screen and (min-width: 48rem) {
   .admin {
     --spacing: 2rem;
@@ -139,10 +153,10 @@ a {
    background-color: #67b4ba;
   display: flex;
   flex: 1;
-  justify-content: space-between;
   align-items: center;
   padding: 0 var(--spacing);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+
 }
 .menu {
   list-style-type: none;
@@ -173,22 +187,32 @@ a {
   display: inline-block;
   border-radius: 5em;
   border: 0;
-  padding: 0.5rem 1rem;
+  padding: 0.4rem .5rem;
   white-space: nowrap;
 }
 .btn--primary {
-  color: #fff;
-  background-color: #56bf89;
+  background-color: Transparent;
+    background-repeat:no-repeat;
+    border: 2px solid white ;
+    cursor:pointer;
+    overflow: hidden;
+    font-size: 15px;
+    -webkit-transition-duration: 3s; /* Safari */
+      transition-duration: 3s;
+  }
+
+.btn--primary:hover {
+  background-color: white;
+  border-color: black;
 }
+
+
 .profile {
   /*box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);*/
   width:46%;
   height: 40%;
   background-color: #ffff;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin: 15px 220px 20px;
   cursor: grab;
   border-radius: 15px;
 
@@ -209,9 +233,31 @@ a {
   font-size: 18px;
 }
 
-.react-datetime-picker__clock {
- display:none;
- }
+
+
+button.findRest {
+  background: white;
+   border: 2px solid #67b4ba;
+    border-radius: 6px;
+
+      color: black;
+      padding: 16px 32px;
+      text-align: center;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      -webkit-transition-duration: 0.4s; /* Safari */
+      transition-duration: 0.4s;
+      cursor: pointer;
+      text-decoration: none;
+      text-transform: uppercase;
+}
+
+button.findRest:hover{
+    background-color: #67b4ba;
+      color: white;
+      border: 2px solid #008CBA;
+}
 
 
 
@@ -236,7 +282,7 @@ width:100%;
 
 
 .restInfo {
-  width:80%;
+  width:90%;
 
   text-align: left;
   margin-left:auto;
@@ -268,32 +314,45 @@ margin-bottom: 7px;
 .getRestaurant {
   text-align: center;
   margin-top: 250px;
+  width:90%;
+
 
 }
 
 .foodtype {
   height:70px;
   font-size: 40px;
-  padding-left: 30px;
-  width: 55%;
-  opacity: .8;
+
+  width: 60%;
+  text-align: center;
   border: 2px solid #67b4ba;
 
   /*border: 2px solid red;*/
 }
 
+
+
 .distance {
+  padding-left: 10px;
   display:block;
-  height:30px;
-  width:120px ;
-  font-size: 20px;
+  height:60px;
+  width:170px ;
+  font-size: 25px;
+  margin-top: 20px;
   margin-left: auto;
   margin-right:auto;
+  background-color: white;
+ border: 2px solid #67b4ba;
+text-align-last:center;
 
  }
 
+ .select option {
+  font-size: 20px;
+ }
+
 .restCard {
-height:650px;
+height:625px;
 opacity:1.0;
 }
 
@@ -337,12 +396,12 @@ opacity:1.0;
     -webkit-box-shadow: 0 0 0px 1000px white inset;
 }
 
-.Collapsible {
-  background-color: #d8d9db;
+.Collapsible.hvr-grow {
+  background-color: #67b4ba;
   margin-bottom: 30px;
   margin-top: 30px;
   width:80%;
-  font-size: 15px;
+  font-size: 12px;
   text-align: center;
   margin-left:auto;
   margin-right:auto;
@@ -351,30 +410,61 @@ opacity:1.0;
   hyphens: auto;
   border-radius: 5px;
   box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
-  border: 2px solid #67b4ba ;
+  border: 3px solid white ;
+
+  opacity: 0.8;
 
 
+}
+
+.Collapsible{
+  background-color: #67b4ba;
+  color:black;
+  margin-bottom: 30px;
+  margin-top: 20px;
+  width:80%;
+  font-size: 12px;
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+  border-radius: 5px;
+  box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
+  border: 3px solid white ;
+  border-bottom:5px solid white;
+  transition-duration: 0.5s;
+
+
+}
+
+.Collapsible:hover{
+  opacity: 1;
 }
 
 
 
 
 
+
 .Collapsible__contentInner {
-  background-color: #d8d9db;
+  background-color: #67b4ba;
+  max-width: 94%;
   font-size: 20px;
   text-align: center;
    -webkit-hyphens: auto;
   -ms-hyphens: auto;
   hyphens: auto;
-  margin-left:7px;
-  margin-right:7px;
+
+  opacity: 1;
+  margin:auto;
+border-top: 2px solid white;
 
 
+}
 
 
-
-  }
 
 
   .is-closed{
@@ -383,10 +473,30 @@ opacity:1.0;
 
    .is-open h1 {
     cursor:pointer;
-    margin-bottom: 0;
+    margin-bottom: 5px;
+    -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+
    }
 
+/*.hvr-grow {
 
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}*/
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+    transform: scale(1.0);
+}
 
 
 
@@ -394,6 +504,7 @@ opacity:1.0;
 
 
 .eventList {
+  margin-top:0px;
   height:100vh;
 }
 
@@ -463,15 +574,18 @@ opacity:1.0;
 }
 
 .description {
- background-color: white;
+
   -webkit-hyphens: auto;
   -ms-hyphens: auto;
   hyphens: auto;
+
+
 }
 
 .ToggleButton {
   text-align: center;
 }
+
 
 .ToggleButton button {
   width: 100%;
@@ -479,10 +593,15 @@ opacity:1.0;
   height:40px;
   border-top: 1px solid white;
   color:white;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .react-datetime-picker {
   margin-top:5px;
+  margin-left: 17px;
+  margin-right: 17px;
 
 }
 
@@ -511,7 +630,7 @@ input.react-datetime-picker__button__input__minute {
 
 .react-datetime-picker__button {
   padding:5px;
-   border: 2px solid #67b4ba;
+
 
 
 }
@@ -520,14 +639,216 @@ input.react-datetime-picker__button__input__minute {
   display:none;
 }
 
+
+.react-datetime-picker__clock {
+ display:none;
+ }
+
+ .react-datetime-picker__calendar {
+  display: none;
+ }
+
+ .react-datetime-picker__button__icon{
+  display: none;
+}
+
+
 textarea.eventDescription {
   border: 2px solid #67b4ba;
   width:80%;
   height:125px;
   font-size: 22px;
   padding:10px;
+  resize: none;
 
 }
+
+.startEnd {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  }
+
+  .startEnd p{
+   word-spacing: 170px;
+   text-decoration-line:underline;
+   text-decoration-color: #67b4ba;
+   margin-top:10px;
+   margin-bottom: 10px;
+  }
+
+  .createEvent {
+    margin-top: 34px;
+   text-align: center;
+  }
+
+  .createEvent button {
+    width: 100%;
+  background-color: #67b4ba;
+  height:40px;
+  border-top: 1px solid white;
+  color:white;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  }
+
+  .eventCurrent {
+    text-align: center;
+  }
+
+  .eventInside p {
+    font-size: 15px;
+  }
+
+  .eventInside h5 {
+    margin-top:15px;
+    margin-bottom:15px;
+  }
+
+  .isGoing {
+    font-size:15px;
+    margin-bottom:5px;
+  }
+
+  .eventButton {
+    margin-top:10px;
+    background: white;
+   border: 2px solid #67b4ba;
+    border-radius: 6px;
+
+      color: black;
+      padding: 3px 8px;
+      text-align: center;
+      display: inline-block;
+      font-size: 9px;
+      margin: 4px 2px;
+      -webkit-transition-duration: 0.4s; /* Safari */
+      transition-duration: 0.4s;
+      cursor: pointer;
+      text-decoration: none;
+      text-transform: uppercase;
+
+  }
+
+
+  .eventButton:hover{
+    background-color: #67b4ba;
+      color: white;
+      border: 2px solid white;
+}
+
+
+   .modalClose{
+    float:left;
+    margin-top: -350px;
+    margin-left:10px;
+    cursor:pointer;
+    color: black;
+    border:none;
+
+
+    font-size: 40px;
+
+    display: inline-block;
+    line-height: 0px;
+    padding: 11px 3px;
+   }
+
+   .modalClose:before {
+    content: "x";
+}
+
+.modalClose:focus {
+  outline:0;
+}
+
+
+ .insideModal{
+  background-color: blue;
+ }
+
+ .eventTag {
+
+  background-color:#67b4ba;
+  width:22%;
+  text-align: center;
+  box-shadow: 0px 10px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  z-index: 2;
+  box-shadow:
+ }
+
+ .eventTag p {
+  margin-top:0px;
+  margin-bottom: 10px;
+
+ }
+
+
+.loggin{
+ margin:60%;
+ display: flex;
+  flex: 1;
+}
+
+.userName {
+margin-left: 15px;
+display: flex;
+  flex: 1;
+margin-top: 10px;
+
+}
+
+.hvr-grow h4 h5{
+  display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+
+}
+
+.hvr-grow:hover{
+    transform: scale(1.1);
+}
+
+.currentEvent {
+  text-align: center;
+  background-color: #67b4ba;
+  color:black;
+  margin-bottom: 30px;
+  margin-top: 20px;
+  width:40%;
+  font-size: 12px;
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+  border-radius: 5px;
+  box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
+  border: 3px solid white ;
+  border-bottom:5px solid white;
+  transition-duration: 0.5s;
+   opacity: 0.8;
+
+    height: 60%;
+
+
+}
+
+.currentEvent:hover{
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+
+
+
 
 /* button {
   border: none;
