--- a/src/App.css
+++ b/src/App.css
@@ -323,7 +323,7 @@ margin-bottom: 7px;
   height:70px;
   font-size: 40px;
 
-  width: 60%;
+  width: 65%;
   text-align: center;
   border: 2px solid #67b4ba;
 
@@ -511,7 +511,7 @@ border-top: 2px solid white;
 
 
 .eventForm {
-  height: 85vh;
+  height: 88vh;
   text-align: center;
 
    cursor:default;
@@ -553,8 +553,8 @@ border-top: 2px solid white;
 .rating {
   background-color: #67b4ba;
   text-align: center;
-  height: 75px;
-  width: 75px;
+  height: 70px;
+  width: 70px;
   padding-right: 10px;
     padding-left: 10px;
     padding-top: 20px;
@@ -600,36 +600,37 @@ border-top: 2px solid white;
 
 .react-datetime-picker {
   margin-top:5px;
-  margin-left: 17px;
-  margin-right: 17px;
+  margin-left: 12px;
+  margin-right: 12px;
+  padding: 5px;
 
 }
 
 input.react-datetime-picker__button__input__month {
-  font-size: 20px;
+  font-size: 15px;
 }
 
 input.react-datetime-picker__button__input__day {
- font-size: 20px;
+ font-size: 15px;
 }
 
 input.react-datetime-picker__button__input__year {
- font-size: 20px;
+ font-size: 15px;
 
 }
 
 input.react-datetime-picker__button__input__hour {
-   font-size: 20px;
+   font-size: 15px;
 
 }
 
 input.react-datetime-picker__button__input__minute {
-   font-size: 20px;
+   font-size: 15px;
 
 }
 
 .react-datetime-picker__button {
-  padding:5px;
+  padding:10px;
 
 
 
@@ -668,7 +669,7 @@ textarea.eventDescription {
   margin-bottom: 20px;
   }
 
-  .startEnd p{
+  .startEnd h4{
    word-spacing: 170px;
    text-decoration-line:underline;
    text-decoration-color: #67b4ba;
@@ -751,7 +752,7 @@ textarea.eventDescription {
 
     display: inline-block;
     line-height: 0px;
-    padding: 11px 3px;
+    padding: 0px 3px;
    }
 
    .modalClose:before {
@@ -775,99 +776,191 @@ textarea.eventDescription {
   box-shadow: 0px 10px rgba(0, 0, 0, 0.2);
   position: absolute;
   z-index: 2;
-  box-shadow:
+border-bottom: 2px solid black ;
  }
 
  .eventTag p {
   margin-top:0px;
   margin-bottom: 10px;
-
  }
+
+ .currentEvent h4 {
+ text-decoration: underline;
+}
+
+.currentEvent h2 {
+ text-decoration: underline;
+}
 
 
 .loggin{
  margin:60%;
  display: flex;
-  flex: 1;
+ flex: 1;
 }
 
 .userName {
+ font-size: 30px;
 margin-left: 15px;
 display: flex;
-  flex: 1;
-margin-top: 10px;
+ flex: 1;
+
 
 }
 
 .hvr-grow h4 h5{
-  display: inline-block;
-    vertical-align: middle;
-    transform: translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    backface-visibility: hidden;
-    -moz-osx-font-smoothing: grayscale;
-    transition-duration: 0.3s;
-    transition-property: transform;
+ display: inline-block;
+   vertical-align: middle;
+   transform: translateZ(0);
+   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+   backface-visibility: hidden;
+   -moz-osx-font-smoothing: grayscale;
+   transition-duration: 0.3s;
+   transition-property: transform;
 
 }
 
 .hvr-grow:hover{
-    transform: scale(1.1);
+   transform: scale(1.1);
 }
 
 .currentEvent {
-  text-align: center;
-  background-color: #67b4ba;
-  color:black;
-  margin-bottom: 30px;
-  margin-top: 20px;
-  width:40%;
-  font-size: 12px;
-  text-align: center;
-  margin-left:auto;
-  margin-right:auto;
-  -webkit-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
-  border-radius: 5px;
-  box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
-  border: 3px solid white ;
-  border-bottom:5px solid white;
-  transition-duration: 0.5s;
-   opacity: 0.8;
+ text-align: center;
+ background-color: #67b4ba;
+ color:black;
+ margin-bottom: 30px;
+ margin-top: 20px;
+ width:45%;
+ font-size: 16px;
+ text-align: center;
+ margin-left:225px;
+ margin-right:auto;
+ -webkit-hyphens: auto;
+ -ms-hyphens: auto;
+ hyphens: auto;
+ border-radius: 5px;
+ box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
+ border: 3px solid white ;
+ border-bottom:5px solid white;
+ transition-duration: 0.5s;
+  opacity: 0.8;
 
-    height: 60%;
+   height: 60%;
 
 
 }
 
 .currentEvent:hover{
-    transform: scale(1.1);
-    opacity: 1;
+   transform: scale(1.1);
+   opacity: 1;
+}
+
+.currentEvent h4 {
+ text-decoration: underline;
+}
+
+.currentEvent h2 {
+ text-decoration: underline;
 }
 
 
+button.loginButton {
+
+ background: white;
+  border: 2px solid #67b4ba;
+   border-radius: 6px;
+
+     color: black;
+     padding: 16px 32px;
+     text-align: center;
+     display: inline-block;
+     font-size: 16px;
+     margin: 10px 2px;
+     -webkit-transition-duration: 0.4s; /* Safari */
+     transition-duration: 0.4s;
+     cursor: pointer;
+     text-decoration: none;
+     text-transform: uppercase;
+}
+
+button.loginButton:hover{
+   background-color: #67b4ba;
+     color: white;
+     border: 2px solid #008CBA;
+}
+
+
+button.regButton {
+
+ background: white;
+  border: 2px solid #67b4ba;
+   border-radius: 6px;
+
+     color: black;
+     padding: 16px 32px;
+     text-align: center;
+     display: inline-block;
+     font-size: 16px;
+     margin: 10px 2px;
+     -webkit-transition-duration: 0.4s; /* Safari */
+     transition-duration: 0.4s;
+     cursor: pointer;
+     text-decoration: none;
+     text-transform: uppercase;
+}
+
+button.regButton:hover{
+   background-color: #67b4ba;
+     color: white;
+     border: 2px solid #008CBA;
+}
+
+
+button.confirmButton {
+
+ background: white;
+  border: 2px solid #67b4ba;
+   border-radius: 6px;
+
+     color: black;
+     padding: 16px 32px;
+     text-align: center;
+     display: inline-block;
+     font-size: 16px;
+     margin: 10px 2px;
+     -webkit-transition-duration: 0.4s; /* Safari */
+     transition-duration: 0.4s;
+     cursor: pointer;
+     text-decoration: none;
+     text-transform: uppercase;
+}
+
+button.confirmButton:hover{
+   background-color: white;
+     color: black;
+     border: 2px solid #008CBA;
+}
 
 
 
 /* button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
+ border: none;
+ outline: 0;
+ display: inline-block;
+ padding: 8px;
+ color: white;
+ background-color: #000;
+ text-align: center;
+ cursor: pointer;
+ width: 100%;
+ font-size: 18px;
 }
 a {
-  text-decoration: none;
-  font-size: 22px;
-  color: black;
+ text-decoration: none;
+ font-size: 22px;
+ color: black;
 }
 button:hover, a:hover {
-  opacity: 0.7;
+ opacity: 0.7;
 } */
 /* beacon */
